# code-kata

./: .gitignore  .markdownlint.json  README.md  test_all_lang.sh
bash/: .gitignore  bash-kata.md  bash_grammar.sh  bats_test_all.sh  bowling.sh  bowling_test.sh
bowling/: bowling.md  bowling.py  test_bowling.py
cpp/: .gitignore  Bowling180701.cpp  Bowling180701.h  Bowling180702.cpp  Bowling180702.h  Bowling180717.cpp  Bowling180717.h  Bowling180801.cpp  Bowling180801.h  Bowling180816.cpp  Bowling180816.h  Bowling180831.cpp  Bowling180831.h  Bowling180920.cpp  Bowling180920.h  FizzBuzz180701.cpp  FizzBuzz180701.h  Makefile  cpp-kata.md  cpp_summary.cpp
cpp/test/: Bowling180701Test.cpp  Bowling180702Test.cpp  Bowling180717Test.cpp  Bowling180801Test.cpp  Bowling180816Test.cpp  Bowling180831Test.cpp  Bowling180920Test.cpp  CMakeLists.txt  FizzBuzz180701Test.cpp
cs/: .gitignore  cs-kata-old.md  cs-kata.md  cs.sln
es5-jasmine/: .gitignore  js-es5-jasmine-kata.md  package-lock.json  package.json
es5-mocha/: javascript_summary.js  js-es5-mocha-kata.md  package-lock.json  package.json
es6/: js-es6-kata.md  package-lock.json  package.json
go/: go-grammer.md  go-kata.md
java/: .gitignore  build.gradle  build.gradle_old  java-kata.md
javascript/: javascript-kata.md  package-lock.json  package.json
kotlin/: .gitignore  build.gradle  kotlin-kata.md  settings.gradle
perl/: perl-grammar.md  perl-kata.md  test.pl
php/: .gitignore  php-kata.md  php_summary.php
python/: .gitignore  python-grammar.py  python-kata.md  test_all.sh
ruby/: bowling_180618.rb  (+10 more)
(+287 files in other folders)
